--- a/Plander/bin/pom.xml
+++ b/Plander/bin/pom.xml
@@ -71,7 +71,15 @@
 	    <artifactId>commons-dbcp</artifactId>
 	    <version>1.4</version>
 	</dependency>	
-
+	
+	 <!-- jackson databind -->
+	<!--https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind -->
+	<dependency>
+	    <groupId>com.fasterxml.jackson.core</groupId>
+	    <artifactId>jackson-databind</artifactId>
+	    <version>2.9.7</version>
+	</dependency> 
+	
 	<!-- 롬복 -->
 	<!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
 	<dependency>
