--- a/Plander/pom.xml
+++ b/Plander/pom.xml
@@ -105,6 +105,12 @@
 		<artifactId>commons-fileupload</artifactId>
 		<version>1.3.2</version>
 	</dependency>
+	<!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
+<dependency>
+    <groupId>commons-io</groupId>
+    <artifactId>commons-io</artifactId>
+    <version>2.2</version>
+</dependency>
 	
 	 
 	
